--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
         <title>Tic Tac Toe</title>
         <link href="https://fonts.googleapis.com/css?family=Slackey&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <script defer src="script"></script>
+        <script src="script.js"></script>
     </head>
     <body>
       <div class="game-tittle">
         <h1>Tic Tac Toe</h1>
       </div>
-        <div class='game'></div>
-        <button class="button" onclick="tic_tac_toe.restart()" title="Restart this game">Restart</button>
+        <div class='game'>
+          <div class="1"></div>
+          <div class="2"></div>
+          <div class="3"></div>
+          <div class="4"></div>
+          <div class="5"></div>
+          <div class="6"></div>
+          <div class="7"></div>
+          <div class="8"></div>
+          <div class="9"></div>
+        </div>
+        <button class="button" onclick="game.restart()" title="Restart this game">Restart</button>
     </body>
     </html>
