--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h1>Tic Tac Toe</h1>
       </div>
         <div class='game'>
-          <div class="1"></div>
-          <div class="2"></div>
-          <div class="3"></div>
-          <div class="4"></div>
-          <div class="5"></div>
-          <div class="6"></div>
-          <div class="7"></div>
-          <div class="8"></div>
-          <div class="9"></div>
+          <div class="C1R1">1</div>
+          <div class="C2R1">2</div>
+          <div class="C3R1">3</div>
+          <div class="C1R2">4</div>
+          <div class="C2R2">5</div>
+          <div class="C3R2">6</div>
+          <div class="C1R3">7</div>
+          <div class="C2R3">8</div>
+          <div class="C3R3">9</div>
         </div>
         <button class="button" onclick="game.restart()" title="Restart this game">Restart</button>
     </body>
