--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       </div>
 
         <div class='gameGrid'>
-          <div class="C1R1"></div>
-          <div class="C2R1"></div>
-          <div class="C3R1"></div>
-          <div class="C1R2"></div>
-          <div class="C2R2"></div>
-          <div class="C3R2"></div>
-          <div class="C1R3"></div>
-          <div class="C2R3"></div>
-          <div class="C3R3"></div>
+          <div class="C1R1">1</div>
+          <div class="C2R1">2</div>
+          <div class="C3R1">3</div>
+          <div class="C1R2">4</div>
+          <div class="C2R2">5</div>
+          <div class="C3R2">6</div>
+          <div class="C1R3">7</div>
+          <div class="C2R3">8</div>
+          <div class="C3R3">9</div>
         </div>
 
         <div class="players">
