JS to make X and O work.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       </div>
 
         <div class='gameGrid'>
-          <div class="C1R1">1</div>
-          <div class="C2R1">2</div>
-          <div class="C3R1">3</div>
-          <div class="C1R2">4</div>
-          <div class="C2R2">5</div>
-          <div class="C3R2">6</div>
-          <div class="C1R3">7</div>
-          <div class="C2R3">8</div>
-          <div class="C3R3">9</div>
+          <div class="C1R1"></div>
+          <div class="C2R1"></div>
+          <div class="C3R1"></div>
+          <div class="C1R2"></div>
+          <div class="C2R2"></div>
+          <div class="C3R2"></div>
+          <div class="C1R3"></div>
+          <div class="C2R3"></div>
+          <div class="C3R3"></div>
         </div>
         <button class="playAgainButton" title="Restart this game">Play Again!</button>
     </div>
@@ -42,11 +42,11 @@
        </div>
 
         <div class="stateOfGame">
-          <!--
+
           <h2 class="whoNext">Player ${ } Turn</h2>
           <h2 class="whoWon">Player ${ } You Won Congratulations!</h2>
           <h2 class="gameTie">Game is a Draw. Play Again!</h2>
-          -->
+
         </div>
     </div>
 
