got the x and o to place and got the whos turn it is to work

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 
         <div class="stateOfGame">
 
-          <h2 class="whoNext">Player ${ } Turn</h2>
-          <h2 class="whoWon">Player ${ } You Won Congratulations!</h2>
-          <h2 class="gameTie">Game is a Draw. Play Again!</h2>
+          <h2 id='person'></h2>
 
         </div>
     </div>
