changes before pulling

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 
      <div class="left-side">
         <div class="players">
-          <h1>Players <button class="changebutton">Change Names</button></h1>
+          <h1>Players</h1>
+          <button class="changeButton">Change Names</button>
           <div class="playerNameX">
-            <p>Player 1: ${Name of the player}</p>
+            <p class="playerNameXX">Player 1: ${Name of the player}</p>
           </div>
           <div class="playerNameO">
-            <p>Player 2: ${Name of the player} </p>
+            <p class="playerNameOO">Player 2: ${Name of the player} </p>
           </div>
        </div>
 
