finish styles, improve scripts, commented out few things.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h1>Tic Tac Toe</h1>
       </div>
 
+      <div class="stateOfGame">
+        <h2 id='person'></h2>
+      </div>
+
         <div class='gameGrid'>
           <div class="C1R1"></div>
           <div class="C2R1"></div>
@@ -29,23 +33,18 @@
         </div>
         <button class="playAgainButton" title="Restart this game">Play Again!</button>
     </div>
-
+<!-- We'll may add this later on...
      <div class="left-side">
         <div class="players">
           <h1>Players <button class="changebutton">Change Names</button></h1>
           <div class="playerNameX">
-            <p>Player 1: ${Name of the player}</p>
+            <p id="the1">Player 1: ${Name of the player}</p>
           </div>
           <div class="playerNameO">
-            <p>Player 2: ${Name of the player} </p>
+            <p id="the2">Player 2: ${Name of the player} </p>
           </div>
        </div>
-
-        <div class="stateOfGame">
-          <h2 id='person'></h2>
-        </div>
-    </div>
-
+-->
 </div>
 
     </body>
